k8s/ingress/minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: data
spec:
  ingressClassName: nginx
  rules:
    - host: minio.wexler.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino
  namespace: data
spec:
  ingressClassName: nginx
  rules:
    - host: trino.wexler.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history
  namespace: spark
spec:
  ingressClassName: nginx
  rules:
    - host: spark-history.wexler.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-panel
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
    - host: panel.wexler.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-panel
                port:
                  number: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafbat-ui
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.wexler.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafbat-ui
                port:
                  number: 8080
