k8s/ingress/vm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: data
spec:
  ingressClassName: nginx
  rules:
    - host: minio.wexler.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino
  namespace: data
spec:
  ingressClassName: nginx
  rules:
    - host: trino.wexler.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history
  namespace: spark
spec:
  ingressClassName: nginx
  rules:
    - host: spark-history.wexler.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-panel
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  ingressClassName: nginx
  rules:
    - host: panel.wexler.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-panel
                port:
                  number: 8501
